k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: spring-boot-vuejs
  labels:
    name: spring-boot-vuejs
    environment: production
