k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-vuejs-service
  namespace: spring-boot-vuejs
  labels:
    app: spring-boot-vuejs
spec:
  type: ClusterIP
  ports:
  - port: 8088
    targetPort: 8088
    protocol: TCP
    name: http
  selector:
    app: spring-boot-vuejs
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
